<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/pages"
        android:checkableBehavior="single">

        <item
            android:id="@+id/mAboutFragment"
            android:icon="@drawable/ic_about"
            android:title="@string/about_us" />

        <item
            android:id="@+id/mScheduleFragment"
            android:icon="@drawable/ic_schedule"
            android:title="@string/schedule" />

        <item
            android:id="@+id/mEventsFragment"
            android:icon="@drawable/ic_events"
            android:title="@string/events" />

        <!--<item
            android:id="@+id/mLiveStreams"
            android:icon="@drawable/ic_live"
            android:title="@string/watch_now" />-->

        <item
            android:id="@+id/mSponsorsFragment"
            android:icon="@drawable/ic_sponsor"
            android:title="@string/sponsors" />

        <item
            android:id="@+id/mTeamFragment"
            android:icon="@drawable/ic_team"
            android:title="@string/team" />
    </group>

    <group
        android:id="@+id/personal"
        android:checkableBehavior="single">

        <item
            android:id="@+id/mProfileFragment"
            android:icon="@drawable/ic_school"
            android:title="@string/school_profile"
            android:visible="false" />

        <item
            android:id="@+id/mLoginFragment"
            android:icon="@drawable/ic_login"
            android:title="@string/login"
            android:visible="true" />
    </group>
</menu>